--- a/leadership.html
+++ b/leadership.html
@@ -49,6 +49,14 @@
       text-align: center;
     }
 
+    h1 {
+      font-size: 40px;
+      border-bottom: 2px solid white;
+      display: inline-block;
+      padding-bottom: 8px;
+      margin-bottom: 50px;
+    }
+
     .card {
       background: linear-gradient(180deg, #0E0202 0%, #07017E 100%);
       border-radius: 12px;
@@ -86,7 +94,7 @@
       background: #0E0202;
       color: white;
       text-align: center;
-      padding: 25px 0;
+      padding: 30px 0;
       border-top: 1px solid #080300;
       font-size: 16px;
     }
@@ -95,14 +103,19 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 25px;
-      margin-bottom: 10px;
+      gap: 28px;
+      margin-bottom: 12px;
+      padding-top: 4px;
     }
 
     .footer-icons svg {
-      width: 28px;
-      height: 28px;
+      width: 30px;
+      height: 30px;
       fill: white;
+      vertical-align: middle;
+      display: inline-block;
+      padding: 2px;
+      box-sizing: content-box;
       transition: transform 0.2s ease, fill 0.2s ease;
     }
 
