--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Madison Ammirati Portfolio</title>
+  <title>Leadership - Madison Ammirati</title>
   <style>
     html, body {
       height: 100%;
       display: flex;
       flex-direction: column;
       margin: 0;
-      background: black;
+      background: #02002F;
       color: white;
       font-family: "Inter", sans-serif;
       overflow-x: hidden;
@@ -42,63 +42,52 @@
 
     main {
       margin-top: 120px;
-      padding: 20px;
+      padding: 40px 20px 80px;
       max-width: 1100px;
       margin-left: auto;
       margin-right: auto;
       text-align: center;
     }
 
-    .banner-container {
-      position: relative;
-      text-align: center;
-      margin-bottom: 80px;
-    }
-
-    .banner-container img {
-      width: 100%;
-      height: auto;
-    }
-
-    .banner-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(0,0,0,0.4);
-      padding: 20px 40px;
-      border-radius: 10px;
-    }
-
-    .banner-text h1 {
-      font-size: 60px;
-      font-family: 'Roboto Mono', monospace;
-      margin: 0;
-    }
-
-    .banner-text p { font-size: 22px; margin-top: 10px; }
-
-    .headshot {
-      width: 240px;
-      border-radius: 50%;
-      margin: 20px auto;
-      display: block;
-      border: 4px solid white;
-    }
-
-    h2 {
-      font-size: 32px;
+    h1 {
+      font-size: 40px;
       border-bottom: 2px solid white;
       display: inline-block;
-      padding-bottom: 6px;
-      margin-bottom: 20px;
+      padding-bottom: 8px;
+      margin-bottom: 50px;
     }
 
-    p {
+    .card {
+      background: linear-gradient(180deg, #0E0202 0%, #07017E 100%);
+      border-radius: 12px;
+      padding: 30px;
+      margin-bottom: 50px;
+      box-shadow: 0 0 15px rgba(255,255,255,0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .card:hover {
+      transform: scale(1.02);
+      box-shadow: 0 0 25px rgba(255,255,255,0.2);
+    }
+
+    .card h3 {
+      font-size: 26px;
+      margin-bottom: 10px;
+    }
+
+    .card p {
       font-size: 18px;
       line-height: 1.6;
-      max-width: 800px;
-      margin: 0 auto 20px;
+      max-width: 900px;
+      margin: 0 auto 10px;
+    }
+
+    .card img {
+      display: block;
+      margin: 30px auto;
+      border-radius: 8px;
+      max-width: 200px;
     }
 
     footer {
@@ -149,27 +138,28 @@
   </header>
 
   <main>
-    <section class="banner-container">
-      <img src="images/banner.png" alt="Banner background image">
-      <div class="banner-text">
-        <h1>Madison Ammirati</h1>
-        <p>Software Engineer | Designer | Innovator</p>
-      </div>
-    </section>
+    <h1>Leadership Experience</h1>
 
-    <section>
-      <img src="images/headshot.png" alt="Headshot of Madison Ammirati" class="headshot">
-      <h2>About Me</h2>
-      <p>Motivated and detail-oriented aspiring Software Engineer seeking internship opportunities to leverage academic knowledge and gain hands-on experience in the field. Highly adept at problem-solving, software development, and team collaboration, with a strong commitment to innovation and excellence.</p>
-    </section>
+    <div class="card">
+      <h3>IDEAs Entrepreneurship Club</h3>
+      <p><strong>System Architect</strong></p>
+      <p>Judged for SJ Hacks with 30+ applications, organized events that boosted membership by 5%, and supported executive board growth through recruitment, interviews, and team coordination. Managed meetings, event logistics, and budgeting to strengthen campus leadership in technology and entrepreneurship.</p>
+      <img src="images/ideas.png" alt="IDEAs Club logo">
+    </div>
 
-    <section>
-      <h2>Skills</h2>
-      <p><strong>Programming Languages:</strong> Java, HTML, Assembly, C++, Python, JavaScript, SQL</p>
-      <p><strong>Frameworks and Tools:</strong> Git, Eclipse, Visual Studio, IntelliJ, Easy C, VS Code, LibGDX, SQL Workspace, Soloist.ai</p>
-      <p><strong>Design / UI:</strong> Adobe Audition, Figma, GIMP</p>
-      <p><strong>Certifications:</strong> Microsoft’s Python Programming Fundamentals (Coursera)</p>
-    </section>
+    <div class="card">
+      <h3>Responsible Computing Club</h3>
+      <p><strong>Lead Industry Mozilla Ambassador</strong></p>
+      <p>Led initiatives to promote responsible computing and ethical technology use by planning and executing 7+ events each semester. Collaborated with campus organizations to expand outreach, and managed a team of 4 to coordinate speaker events and workshops with industry professionals that provided students with career insights and professional development opportunities.</p>
+      <img src="images/RCC.png" alt="Responsible Computing Club logo">
+    </div>
+
+    <div class="card">
+      <h3>Firefox Student Ambassador</h3>
+      <p><strong>Student Ambassador</strong></p>
+      <p>Helped launch the first Firefox Student Ambassador program on campus, building brand presence through creative events and outreach. Designed a compliant website in coordination with Mozilla’s legal team and organized initiatives such as case competitions, themed promotions, and giveaways to increase awareness and student engagement.</p>
+      <img src="images/FireFox.png" alt="Firefox logo">
+    </div>
   </main>
 
   <footer>
