--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leadership - Madison Ammirati</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Madison Ammirati Portfolio</title>
   <style>
     html, body {
       height: 100%;
       display: flex;
       flex-direction: column;
       margin: 0;
-      background: #02002F;
+      background: black;
       color: white;
       font-family: "Inter", sans-serif;
       overflow-x: hidden;
@@ -42,59 +42,70 @@
 
     main {
       margin-top: 120px;
-      padding: 40px 20px 80px;
+      padding: 20px;
       max-width: 1100px;
       margin-left: auto;
       margin-right: auto;
       text-align: center;
     }
 
-    h1 {
-      font-size: 40px;
+    .banner-container {
+      position: relative;
+      text-align: center;
+      margin-bottom: 80px;
+    }
+
+    .banner-container img {
+      width: 100%;
+      height: auto;
+    }
+
+    .banner-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(0,0,0,0.4);
+      padding: 20px 40px;
+      border-radius: 10px;
+    }
+
+    .banner-text h1 {
+      font-size: 60px;
+      font-family: 'Roboto Mono', monospace;
+      margin: 0;
+    }
+
+    .banner-text p { font-size: 22px; margin-top: 10px; }
+
+    .headshot {
+      width: 240px;
+      border-radius: 50%;
+      margin: 20px auto;
+      display: block;
+      border: 4px solid white;
+    }
+
+    h2 {
+      font-size: 32px;
       border-bottom: 2px solid white;
       display: inline-block;
-      padding-bottom: 8px;
-      margin-bottom: 50px;
+      padding-bottom: 6px;
+      margin-bottom: 20px;
     }
 
-    .card {
-      background: linear-gradient(180deg, #0E0202 0%, #07017E 100%);
-      border-radius: 12px;
-      padding: 30px;
-      margin-bottom: 50px;
-      box-shadow: 0 0 15px rgba(255,255,255,0.1);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .card:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 25px rgba(255,255,255,0.2);
-    }
-
-    .card h3 {
-      font-size: 26px;
-      margin-bottom: 10px;
-    }
-
-    .card p {
+    p {
       font-size: 18px;
       line-height: 1.6;
-      max-width: 900px;
-      margin: 0 auto 10px;
-    }
-
-    .card img {
-      display: block;
-      margin: 30px auto;
-      border-radius: 8px;
-      max-width: 200px;
+      max-width: 800px;
+      margin: 0 auto 20px;
     }
 
     footer {
       background: #0E0202;
       color: white;
       text-align: center;
-      padding: 30px 0;
+      padding: 32px 0;
       border-top: 1px solid #080300;
       font-size: 16px;
     }
@@ -105,7 +116,7 @@
       align-items: center;
       gap: 28px;
       margin-bottom: 12px;
-      padding-top: 4px;
+      padding-top: 6px;
     }
 
     .footer-icons svg {
@@ -114,7 +125,7 @@
       fill: white;
       vertical-align: middle;
       display: inline-block;
-      padding: 2px;
+      padding: 3px;
       box-sizing: content-box;
       transition: transform 0.2s ease, fill 0.2s ease;
     }
@@ -138,28 +149,27 @@
   </header>
 
   <main>
-    <h1>Leadership Experience</h1>
+    <section class="banner-container">
+      <img src="images/banner.png" alt="Banner background image">
+      <div class="banner-text">
+        <h1>Madison Ammirati</h1>
+        <p>Software Engineer | Designer | Innovator</p>
+      </div>
+    </section>
 
-    <div class="card">
-      <h3>IDEAs Entrepreneurship Club</h3>
-      <p><strong>System Architect</strong></p>
-      <p>Judged for SJ Hacks with 30+ applications, organized events that boosted membership by 5%, and supported executive board growth through recruitment, interviews, and team coordination. Managed meetings, event logistics, and budgeting to strengthen campus leadership in technology and entrepreneurship.</p>
-      <img src="images/ideas.png" alt="IDEAs Club logo">
-    </div>
+    <section>
+      <img src="images/headshot.png" alt="Headshot of Madison Ammirati" class="headshot">
+      <h2>About Me</h2>
+      <p>Motivated and detail-oriented aspiring Software Engineer seeking internship opportunities to leverage academic knowledge and gain hands-on experience in the field. Highly adept at problem-solving, software development, and team collaboration, with a strong commitment to innovation and excellence.</p>
+    </section>
 
-    <div class="card">
-      <h3>Responsible Computing Club</h3>
-      <p><strong>Lead Industry Mozilla Ambassador</strong></p>
-      <p>Led initiatives to promote responsible computing and ethical technology use by planning and executing 7+ events each semester. Collaborated with campus organizations to expand outreach, and managed a team of 4 to coordinate speaker events and workshops with industry professionals that provided students with career insights and professional development opportunities.</p>
-      <img src="images/RCC.png" alt="Responsible Computing Club logo">
-    </div>
-
-    <div class="card">
-      <h3>Firefox Student Ambassador</h3>
-      <p><strong>Student Ambassador</strong></p>
-      <p>Helped launch the first Firefox Student Ambassador program on campus, building brand presence through creative events and outreach. Designed a compliant website in coordination with Mozilla’s legal team and organized initiatives such as case competitions, themed promotions, and giveaways to increase awareness and student engagement.</p>
-      <img src="images/FireFox.png" alt="Firefox logo">
-    </div>
+    <section>
+      <h2>Skills</h2>
+      <p><strong>Programming Languages:</strong> Java, HTML, Assembly, C++, Python, JavaScript, SQL</p>
+      <p><strong>Frameworks and Tools:</strong> Git, Eclipse, Visual Studio, IntelliJ, Easy C, VS Code, LibGDX, SQL Workspace, Soloist.ai</p>
+      <p><strong>Design / UI:</strong> Adobe Audition, Figma, GIMP</p>
+      <p><strong>Certifications:</strong> Microsoft’s Python Programming Fundamentals (Coursera)</p>
+    </section>
   </main>
 
   <footer>
@@ -171,7 +181,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 .5C5.73.5.5 5.74.5 12.02c0 5.1 3.29 9.42 7.86 10.95.58.1.79-.25.79-.55v-2.02c-3.2.7-3.88-1.54-3.88-1.54-.52-1.3-1.27-1.65-1.27-1.65-1.04-.71.08-.7.08-.7 1.15.08 1.75 1.18 1.75 1.18 1.02 1.74 2.67 1.24 3.32.95.1-.74.4-1.25.72-1.54-2.56-.29-5.26-1.28-5.26-5.68 0-1.26.45-2.28 1.18-3.09-.12-.29-.52-1.45.11-3.03 0 0 .97-.31 3.18 1.18a10.94 10.94 0 012.9-.39c.98 0 1.97.13 2.9.39 2.2-1.5 3.17-1.18 3.17-1.18.64 1.58.24 2.74.12 3.03.74.81 1.18 1.83 1.18 3.09 0 4.41-2.71 5.38-5.29 5.67.41.36.77 1.1.77 2.23v3.3c0 .3.21.66.8.55A10.52 10.52 0 0023.5 12c0-6.28-5.23-11.5-11.5-11.5z"/></svg>
       </a>
       <a href="mailto:madison.ammirati@gmail.com" aria-label="Email">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 13.065L.5 6V4l11.5 7 11.5-7v2z"/><path d="M0 6v14h24V6l-12 7L0 6z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2 -2 28 28"><path d="M0 4a2 2 0 012-2h20a2 2 0 012 2v16a2 2 0 01-2 2H2a2 2 0 01-2-2V4zm2 0l10 7 10-7H2zm0 2.236V20h20V6.236l-10 7-10-7z"/></svg>
       </a>
     </div>
     <p>© 2025 Madison Ammirati | Portfolio</p>
