--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 
     <section>
       <h2>Skills</h2>
-      <p><strong>Programming Languages:</strong> Java, HTML, Assembly, C++, Python, CSS, JavaScript, SQL</p>
-      <p><strong>Frameworks and Tools:</strong> Git, Eclipse, Visual Studio, IntelliJ, Easy C, VS Code, LibGDX, JavaFX, Zulu, Node.js, SQL Workspace, Soloist.ai</p>
-      <p><strong>Design / UI:</strong> Adobe Audition, Figma, GIMP</p>
+      <p><strong>Programming Languages:</strong> Java, Python, HTML, x86 Assembly, C++, CSS, JavaScript, SQL</p>
+      <p><strong>Frameworks and Tools:</strong> Git, Eclipse, Visual Studio, ReactNative, IntelliJ, EasyC, VSCode, LibGDX, JavaFX, Zulu, Node.js, SQL Workspace, Google Colab,  </p>
+      <p><strong>Design / UI:</strong> Adobe Audition, Figma, GIMP, soloist.ai </p>
       <p><strong>Certifications:</strong> Microsoft’s Python Programming Fundamentals (Coursera)</p>
     </section>
   </main>
