--- a/leadership.html
+++ b/leadership.html
@@ -63,11 +63,12 @@
       padding: 30px;
       margin-bottom: 50px;
       box-shadow: 0 0 15px rgba(255,255,255,0.1);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
     }
 
     .card:hover {
-      transform: scale(1.02);
+      transform: scale(1.03);
       box-shadow: 0 0 25px rgba(255,255,255,0.2);
     }
 
@@ -140,26 +141,35 @@
   <main>
     <h1>Leadership Experience</h1>
 
-    <div class="card">
-      <h3>IDEAs Entrepreneurship Club</h3>
-      <p><strong>System Architect</strong></p>
-      <p>Judged for SJ Hacks with 30+ applications, organized events that boosted membership by 5%, and supported executive board growth through recruitment, interviews, and team coordination. Managed meetings, event logistics, and budgeting to strengthen campus leadership in technology and entrepreneurship.</p>
-      <img src="images/ideas.png" alt="IDEAs Club logo" />
-    </div>
+    <!-- Responsible Computing Club -->
+    <a href="https://www.sjsu.edu/engineering/rcc" target="_blank" style="text-decoration:none;color:inherit;">
+      <div class="card">
+        <h3>Responsible Computing Club</h3>
+        <p><strong>Lead Industry Mozilla Ambassador</strong></p>
+        <p>Led initiatives to promote responsible computing and ethical technology use by planning and executing 7+ events each semester. Collaborated with campus organizations to expand outreach, and managed a team of 4 to coordinate speaker events and workshops with industry professionals that provided students with career insights and professional development opportunities.</p>
+        <img src="images/RCC.png" alt="Responsible Computing Club logo" />
+      </div>
+    </a>
 
-    <div class="card">
-      <h3>Responsible Computing Club</h3>
-      <p><strong>Lead Industry Mozilla Ambassador</strong></p>
-      <p>Led initiatives to promote responsible computing and ethical technology use by planning and executing 7+ events each semester. Collaborated with campus organizations to expand outreach, and managed a team of 4 to coordinate speaker events and workshops with industry professionals that provided students with career insights and professional development opportunities.</p>
-      <img src="images/RCC.png" alt="Responsible Computing Club logo" />
-    </div>
+    <!-- IDEAs Entrepreneurship Club -->
+    <a href="https://www.sjsu.edu/ideas" target="_blank" style="text-decoration:none;color:inherit;">
+      <div class="card">
+        <h3>IDEAs Entrepreneurship Club</h3>
+        <p><strong>System Architect</strong></p>
+        <p>Judged for SJ Hacks with 30+ applications, organized events that boosted membership by 5%, and supported executive board growth through recruitment, interviews, and team coordination. Managed meetings, event logistics, and budgeting to strengthen campus leadership in technology and entrepreneurship.</p>
+        <img src="images/ideas.png" alt="IDEAs Club logo" />
+      </div>
+    </a>
 
-    <div class="card">
-      <h3>Firefox Student Ambassador</h3>
-      <p><strong>Student Ambassador</strong></p>
-      <p>Helped launch the first Firefox Student Ambassador program on campus, building brand presence through creative events and outreach. Designed a compliant website in coordination with Mozilla’s legal team and organized initiatives such as case competitions, themed promotions, and giveaways to increase awareness and student engagement.</p>
-      <img src="images/FireFox.png" alt="Firefox logo" />
-    </div>
+    <!-- Firefox Student Ambassador -->
+    <a href="https://www.mozilla.org/en-US/studentambassadors/" target="_blank" style="text-decoration:none;color:inherit;">
+      <div class="card">
+        <h3>Firefox Student Ambassador</h3>
+        <p><strong>Student Ambassador</strong></p>
+        <p>Helped launch the first Firefox Student Ambassador program on campus, building brand presence through creative events and outreach. Designed a compliant website in coordination with Mozilla’s legal team and organized initiatives such as case competitions, themed promotions, and giveaways to increase awareness and student engagement.</p>
+        <img src="images/FireFox.png" alt="Firefox logo" />
+      </div>
+    </a>
   </main>
 
   <footer>
