--- a/leadership.html
+++ b/leadership.html
@@ -142,7 +142,7 @@
     <h1>Leadership Experience</h1>
 
     <!-- Responsible Computing Club -->
-    <a href="https://www.sjsu.edu/engineering/rcc" target="_blank" style="text-decoration:none;color:inherit;">
+    <a href="https://www.instagram.com/rcc.sjsu" target="_blank" style="text-decoration:none;color:inherit;">
       <div class="card">
         <h3>Responsible Computing Club</h3>
         <p><strong>Lead Industry Mozilla Ambassador</strong></p>
@@ -152,7 +152,7 @@
     </a>
 
     <!-- IDEAs Entrepreneurship Club -->
-    <a href="https://www.sjsu.edu/ideas" target="_blank" style="text-decoration:none;color:inherit;">
+    <a href="https://www.instagram.com/ideas.sjsu/?hl=en" target="_blank" style="text-decoration:none;color:inherit;">
       <div class="card">
         <h3>IDEAs Entrepreneurship Club</h3>
         <p><strong>System Architect</strong></p>
@@ -162,7 +162,7 @@
     </a>
 
     <!-- Firefox Student Ambassador -->
-    <a href="https://www.mozilla.org/en-US/studentambassadors/" target="_blank" style="text-decoration:none;color:inherit;">
+    <a href="https://soloist.ai/responsiblecomputingclub" target="_blank" style="text-decoration:none;color:inherit;">
       <div class="card">
         <h3>Firefox Student Ambassador</h3>
         <p><strong>Student Ambassador</strong></p>
