--- a/projects.html
+++ b/projects.html
@@ -142,7 +142,7 @@
     <h1>Projects</h1>
 
     <!-- EPA ESA Web App -->
-    <a href="https://www.figma.com/proto/YOUR_EPA_PROJECT_LINK" target="_blank" style="text-decoration:none;color:inherit;">
+    <a href="" style="text-decoration:none;color:inherit;">
       <div class="card">
         <h3>EPA ESA Web App</h3>
         <p><strong>User Research Lead</strong></p>
@@ -152,7 +152,7 @@
     </a>
 
     <!-- Reef Guardian Game -->
-    <a href="https://github.com/madi6116/ReefGuardianGame" target="_blank" style="text-decoration:none;color:inherit;">
+    <a href="https://github.com/d2blepeace/CMPE-131-Term-Project/tree/master" target="_blank" style="text-decoration:none;color:inherit;">
       <div class="card">
         <h3>Reef Guardian Game</h3>
         <p><strong>System Architect</strong></p>
@@ -162,7 +162,7 @@
     </a>
 
     <!-- Engineering Labs -->
-    <a href="https://github.com/madi6116/EngineeringLabs" target="_blank" style="text-decoration:none;color:inherit;">
+    <a href="https://github.com/madi6116/Java-Labs" target="_blank" style="text-decoration:none;color:inherit;">
       <div class="card">
         <h3>Engineering Labs</h3>
         <p><strong>Developer</strong></p>
