--- a/leadership.html
+++ b/leadership.html
@@ -155,7 +155,7 @@
     <a href="https://www.instagram.com/ideas.sjsu/?hl=en" target="_blank" style="text-decoration:none;color:inherit;">
       <div class="card">
         <h3>IDEAs Entrepreneurship Club</h3>
-        <p><strong>System Architect</strong></p>
+        <p><strong>Vice President</strong></p>
         <p>Judged for SJ Hacks with 30+ applications, organized events that boosted membership by 5%, and supported executive board growth through recruitment, interviews, and team coordination. Managed meetings, event logistics, and budgeting to strengthen campus leadership in technology and entrepreneurship.</p>
         <img src="images/ideas.png" alt="IDEAs Club logo" />
       </div>
