--- a/projects.html
+++ b/projects.html
@@ -190,7 +190,7 @@
     </a>
 
     <!-- Autonomous Robot -->
-    <a href="#" target="_blank" class="card-link">
+    <a href="https://www.linkedin.com/feed/update/urn:li:activity:7251777779870904320" target="_blank" class="card-link">
       <div class="card">
         <h3>Autonomous Robot</h3>
         <p><strong>Software Engineer</strong></p>
