--- a/projects.html
+++ b/projects.html
@@ -150,7 +150,7 @@
     <h1>Projects</h1>
 
     <!-- EPA ESA Web App -->
-    <a href="https://www.figma.com/proto/YOUR_EPA_PROJECT_LINK" target="_blank" class="card-link">
+    <a href="" target="_blank" class="card-link">
       <div class="card">
         <h3>EPA ESA Web App</h3>
         <p><strong>User Research Lead</strong></p>
@@ -160,7 +160,7 @@
     </a>
 
     <!-- Reef Guardian Game -->
-    <a href="https://github.com/d2blepeace/CMPE-131-Term-Project/blob/master/core/src/main/java/io/github/ReefGuardianProject/core/GameScreen.java" target="_blank" class="card-link">
+    <a href="https://github.com/d2blepeace/CMPE-131-Term-Project" target="_blank" class="card-link">
       <div class="card">
         <h3>Reef Guardian Game</h3>
         <p><strong>System Architect</strong></p>
