--- a/projects.html
+++ b/projects.html
@@ -198,6 +198,16 @@
         <img src="images/robot.png" alt="Autonomous Robot Project" />
       </div>
     </a>
+    <!-- Campus Essentials Hub -->
+<a href="https://www.figma.com/proto/ay65PCiQElNKbUrZYl3UXi/Hacktivism-II-Mockups---Fall-2025?node-id=26-4&t=BXOHREoEe6KI2XCK-1&scaling=scale-down&content-scaling=fixed&page-id=2%3A2&starting-point-node-id=26%3A4" target="_blank" class="card-link">
+  <div class="card">
+    <h3>Campus Essentials Hub</h3>
+    <p><strong>Designer</strong></p>
+    <p>Participated in an Ideathon with a team of three to research a social issue, develop an app concept, and design the prototype in Figma. We analyzed student challenges, identified pain points, and created user stories and features. Our team designed the SJSU Campus Essentials Hub, a mobile app that centralizes campus aid, filters resources by eligibility, and gamifies engagement to help students easily access the support they need.</p>
+    <img src="images/campus_hub.png" alt="Campus Essentials Hub Project" />
+  </div>
+</a>
+
   </main>
 
   <footer>
