--- a/projects.html
+++ b/projects.html
@@ -168,7 +168,24 @@
         <img src="images/reefgame.png" alt="Reef Guardian Game Screenshot" />
       </div>
     </a>
-
+ <!-- Overwatchful -->
+    <a href="https://github.com/madi6116/OW2-Stats-Tracker" target="_blank" class="card-link">
+      <div class="card">
+        <h3>Overwatchful</h3>
+        <p><strong>System Architect</strong></p>
+        <p>Created Overwatch 2 Stats Tracker so you can search for players and see their stats.</p>
+        <img src="images/overwatch.png" alt="Overwatch Logo" />
+      </div>
+    </a>
+     <!-- Overwatchful -->
+    <a href="https://github.com/madi6116/OW2-Stats-Tracker" target="_blank" class="card-link">
+      <div class="card">
+        <h3>Overwatchful</h3>
+        <p><strong>System Architect</strong></p>
+        <p>Created Overwatch 2 Stats Tracker so you can search for players and see their stats.</p>
+        <img src="images/overwatch.png" alt="Overwatch Logo" />
+      </div>
+    </a>
     <!-- Engineering Labs -->
     <a href="https://github.com/madi6116/EngineeringLabs" target="_blank" class="card-link">
       <div class="card">
