Update and rename leadership.html to experience.html

--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Leadership - Madison Ammirati</title>
+  <title>Experience - Madison Ammirati</title>
   <style>
     html, body {
       height: 100%;
@@ -132,14 +132,23 @@
   <header>
     <nav>
       <a href="index.html">Home</a>
-      <a href="leadership.html">Leadership</a>
+      <a href="Experience.html">Experience</a>
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
-    <h1>Leadership Experience</h1>
+    <h1>Experience</h1>
+    <!-- Geek Squad Consulation Agent -->
+    <a href="https://www.bestbuy.com/site/electronics/services/pcmcat1528819595254.c?id=pcmcat1528819595254" target="_blank" style="text-decoration:none;color:inherit;">
+      <div class="card">
+        <h3>Best Buy</h3>
+        <p><strong>Geek Squad Consulation Agent</strong></p>
+        <p>Help clients with troubleshooting, setting up new devices, putting on screen protectors, assisting with devices pickups, or checking in devices for advanced fixes.  
+        <img src="images/Geek-Squad.png" alt="Geek Squad logo" />
+      </div>
+    </a>
 <!-- Firefox Student Ambassador -->
     <a href="https://soloist.ai/responsiblecomputingclub" target="_blank" style="text-decoration:none;color:inherit;">
       <div class="card">
@@ -164,7 +173,7 @@
       <div class="card">
         <h3>IDEAs Entrepreneurship Club</h3>
         <p><strong>Vice President</strong></p>
-        <p>Judged for SJ Hacks with 30+ applications, organized events that boosted membership by 5%, and supported executive board growth through recruitment, interviews, and team coordination. Managed meetings, event logistics, and budgeting to strengthen campus leadership in technology and entrepreneurship.</p>
+        <p>Judged for SJ Hacks with 30+ applications, organized events that boosted membership by 5%, and supported executive board growth through recruitment, interviews, and team coordination. Managed meetings, event logistics, and budgeting to strengthen campus Experience in technology and entrepreneurship.</p>
         <img src="images/ideas.png" alt="IDEAs Club logo" />
       </div>
     </a>
