--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <header>
     <nav>
       <a href="index.html">Home</a>
-      <a href="leadership.html">Leadership</a>
+      <a href="Experience.html">Leadership</a>
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </nav>
