--- a/experience.html
+++ b/experience.html
@@ -145,7 +145,7 @@
       <div class="card">
         <h3>Best Buy</h3>
         <p><strong>Geek Squad Consulation Agent</strong></p>
-        <p>Help clients with troubleshooting, setting up new devices, putting on screen protectors, assisting with devices pickups, or checking in devices for advanced fixes.  
+        <p>Diagnosed and resolved hardware, software, and network issues across Windows, macOS, and mobile systems using diagnostic tools and command-line utilities, provided technical support for OS reinstalls, driver updates, malware removal, and data recovery while maintaining clear communication with customers, and collaborated in a fast-paced technical environment to triage issues, document solutions, and strengthen debugging and problem-solving skills applicable to software development.
         <img src="images/Geek-Squad.png" alt="Geek Squad logo" />
       </div>
     </a>
