--- a/projects.html
+++ b/projects.html
@@ -172,17 +172,8 @@
     <a href="https://github.com/madi6116/OW2-Stats-Tracker" target="_blank" class="card-link">
       <div class="card">
         <h3>Overwatchful</h3>
-        <p><strong>System Architect</strong></p>
-        <p>Created Overwatch 2 Stats Tracker so you can search for players and see their stats.</p>
-        <img src="images/overwatch.png" alt="Overwatch Logo" />
-      </div>
-    </a>
-     <!-- Overwatchful -->
-    <a href="https://github.com/madi6116/OW2-Stats-Tracker" target="_blank" class="card-link">
-      <div class="card">
-        <h3>Overwatchful</h3>
-        <p><strong>System Architect</strong></p>
-        <p>Created Overwatch 2 Stats Tracker so you can search for players and see their stats.</p>
+        <p><strong>Developer</strong></p>
+        <p> Personal solo project where I created a stats tracker for Overwatch 2 so you can search for a player and see theri stats including rank, time played and more. </p>
         <img src="images/overwatch.png" alt="Overwatch Logo" />
       </div>
     </a>
