--- a/projects.html
+++ b/projects.html
@@ -140,7 +140,7 @@
   <header>
     <nav>
       <a href="index.html">Home</a>
-      <a href="leadership.html">Leadership</a>
+      <a href="experience.html">Experience</a>
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </nav>
